--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ aux_links:
     - "https://swordsandravens.net"
 
 # Build settings
-theme: just-the-docs
-remote_theme: pmarsceill/just-the-docs
+theme: "just-the-docs"
+remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
 
